--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dreamland": "^0.0.24",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "dreamland-router": "https://github.com/mercuryworkshop/dreamland-router",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
+    "vite-plugin-dreamland": "^1.2.1",
+    "rollup-plugin-typescript2": "^0.36.0"
+
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
